--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.2",
+    "@wintyo/typed-vue": "^0.0.2",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.2",
-    "@types/node": "^13.11.0"
+    "@types/node": "^13.11.0",
+    "node-sass": "^4.13.1",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
+    "sass-loader": "^8.0.2"
   }
 }
