--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.2",
     "@wintyo/typed-vue": "^0.0.2",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-property-decorator": "^8.4.1"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.2",
