--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.2",
+    "@vue/composition-api": "^0.5.0",
     "@wintyo/typed-vue": "^0.0.2",
     "nuxt": "^2.0.0",
     "vue-property-decorator": "^8.4.1"
