--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nuxt-ts",
     "build": "nuxt-ts build",
     "start": "nuxt-ts start",
-    "generate": "nuxt-ts generate"
+    "generate": "nuxt-ts generate",
+    "type-check": "vue-type-check --workspace ./ --srcDir ./components --onlyTemplate"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.2",
@@ -23,6 +24,7 @@
     "node-sass": "^4.13.1",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vue-type-check": "^1.0.0"
   }
 }
